--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,12 @@
   box-sizing: border-box;
 }
 :root {
-
   --primaryColor: #487eb0;
 
   --secondaryColor: #1e282f;
   --textColor: grey;
+}
+
+.link {
+  text-decoration: none;
 }
