feat: submit name

--- a/src/components/instructions/Instructions.css
+++ b/src/components/instructions/Instructions.css
@@ -16,18 +16,17 @@
   color: var(--primaryColor);
 }
 #instruction {
-  /* height: 75px; */
-
-  font-size: 1.2rem;
+  font-size: 1rem;
   background-color: var(--thirdColor);
   color: var(--secondaryColor);
+  letter-spacing: 1px;
 }
 #instruction-list {
-  /* height: 75px; */
   font-weight: 300;
   padding-left: 1rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   background-color: var(--thirdColor);
   color: var(--secondaryColor);
   word-spacing: 3px;
+  letter-spacing: 1px;
 }
