--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -11,7 +11,6 @@
   top: 0%;
   width: 100%;
   height: 300px;
-  /* background-color: var(--thirdColor); */
 
   background: rgba(52, 73, 94, 0.8);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -23,7 +22,6 @@
   border-bottom-right-radius: 15%;
 
   display: flex;
-  /* flex-direction: column; */
   padding-top: 4rem;
   align-items: center;
   justify-content: center;
@@ -31,8 +29,9 @@
 .header-heading {
   font-size: 2.5rem;
   color: var(--primaryColor);
-  /* justify-self: flex-start;
-   */
+  text-transform: capitalize;
 
   align-self: flex-start;
+  letter-spacing: 1px;
+  word-spacing: 1px;
 }
