--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -79,8 +79,12 @@ body {
   color: #03e9f4;
   font-size: 12px;
 }
+.submit-button {
+  background-color: transparent;
+  border: transparent;
+}
 
-.login-box form a {
+#link {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
@@ -94,20 +98,18 @@ body {
   letter-spacing: 4px;
 }
 
-.login-box a:hover {
+#link:hover {
   background: #03e9f4;
-  color: #fff;
+  color: black;
   border-radius: 5px;
-  /* box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
-    0 0 100px #03e9f4; */
 }
 
-.login-box a span {
+#link span {
   position: absolute;
   display: block;
 }
 
-.login-box a span:nth-child(1) {
+#link span:nth-child(1) {
   top: 0;
   left: -100%;
   width: 100%;
@@ -126,7 +128,7 @@ body {
   }
 }
 
-.login-box a span:nth-child(2) {
+#link span:nth-child(2) {
   top: -100%;
   right: 0;
   width: 2px;
@@ -146,7 +148,7 @@ body {
   }
 }
 
-.login-box a span:nth-child(3) {
+#link span:nth-child(3) {
   bottom: 0;
   right: -100%;
   width: 100%;
@@ -166,7 +168,7 @@ body {
   }
 }
 
-.login-box a span:nth-child(4) {
+#link span:nth-child(4) {
   bottom: -100%;
   left: 0;
   width: 2px;
