--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,10 +1,10 @@
-:root {
+/* :root {
   --primaryColor: #1abc9c;
 
   --secondaryColor: #ecf0f1;
   --thirdColor: #34495e;
   --textColor: grey;
-}
+} */
 
 .login {
   width: 100%;
