--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -84,7 +84,7 @@ body {
   border: transparent;
 }
 
-#link {
+#submit-button {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
@@ -98,18 +98,18 @@ body {
   letter-spacing: 4px;
 }
 
-#link:hover {
+#submit-button:hover {
   background: #03e9f4;
   color: black;
   border-radius: 5px;
 }
 
-#link span {
+#submit-button span {
   position: absolute;
   display: block;
 }
 
-#link span:nth-child(1) {
+#submit-button span:nth-child(1) {
   top: 0;
   left: -100%;
   width: 100%;
@@ -128,7 +128,7 @@ body {
   }
 }
 
-#link span:nth-child(2) {
+#submit-button span:nth-child(2) {
   top: -100%;
   right: 0;
   width: 2px;
@@ -148,7 +148,7 @@ body {
   }
 }
 
-#link span:nth-child(3) {
+#submit-button span:nth-child(3) {
   bottom: 0;
   right: -100%;
   width: 100%;
@@ -168,7 +168,7 @@ body {
   }
 }
 
-#link span:nth-child(4) {
+#submit-button span:nth-child(4) {
   bottom: -100%;
   left: 0;
   width: 2px;
